2009-12-01  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #360455
	* class.cs: Never report a unused warning for generic events to
	workaround wrong expression type.

2009-11-30  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #558305
	* decl.cs, class.cs: Check partial method definitions using correct
	flag.

2009-11-30  Marek Safar  <marek.safar@gmail.com>

	* argument.cs: Don't cache rarely used dynamic flag.

2009-11-27  Marek Safar  <marek.safar@gmail.com>

	* cs-parser.jay: Use jay global stacks (saves over 3MB for corlib).

2009-11-27  Marek Safar  <marek.safar@gmail.com>

	* ecore.cs (SimpleName): Removed no longer needed in_transit as
	Resolve is now non-reentrant (saves ~0.6MB for corlib).

2009-11-26  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #545081
	* decl.cs: Check private nested types of nested types recursively.

2009-11-26  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #558305
	* location.cs: Ignore self referencing #line directive

2009-11-26  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #558292
	* class.cs: Allow single unsafe fixed buffer fields.

2009-11-26  Marek Safar  <marek.safar@gmail.com>

	* expression: Optimize few more zero-based operations.

2009-11-26  Marek Safar  <marek.safar@gmail.com>

	* cs-tokenizer.cs, cs-parser.jay: Simplify literal parsing, also
	avoids boxing of literal values.

2009-11-26  Marek Safar  <marek.safar@gmail.com>

	* cs-tokenizer.cs, argument.cs, eval.cs, linq.cs, decl.cs,
	expression.cs, ecore.cs, location.cs, cs-parser.jay, attribute.cs,
	codegen.cs: LocatedToken redesing to avoid excessive allocation and
	boxing (saves ~7MB for corlib). Also fixes presise token location.

2009-11-25  Marek Safar  <marek.safar@gmail.com>

	* ecore.cs, cs-parser.jay: Keep parser structures local. Share
	common data buckers.

2009-11-24  Marek Safar  <marek.safar@gmail.com>

	* expression.cs: Lower static array initializer barrier.
	
	* support.cs, driver.cs: Share reader buffer.
